stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_run__run_basic_workflow_with_file_input.snap
---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/mock/basic.yaml"
    - "--input=examples/eval/input.json"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Missing file: tests/mock/basic.yaml
