stepflow-rs/crates/stepflow-main/tests/commands/snapshots/test_cli__commands__test_run__run_basic_workflow_with_yaml_input.snap
---
source: crates/stepflow-main/tests/commands/test_run.rs
info:
  program: stepflow
  args:
    - "--log-file=/dev/null"
    - "--omit-stack-trace"
    - run
    - "--flow=tests/mock/basic.yaml"
    - "--input-yaml=m: 2\nn: 7"
---
success: true
exit_code: 0
----- stdout -----
{"outcome":"failed","error":{"code":500,"message":"Flow execution failed: failed to resolve value"}}
----- stderr -----
